# aws-c-mqtt

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  build-deps.sh  builder.json  cppcheck.sh  format-check.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  codecov.yml  handle-stale-discussions.yml  stale_issue.yml
cmake/: aws-c-mqtt-config.cmake
codebuild/: CanaryMockApplication.py  CanaryWrapper.py  CanaryWrapper_24_7.py  CanaryWrapper_Classes.py  CanaryWrapper_MetricFunctions.py  CanaryWrapper_Persistent.py  RunMockApplication.sh  common-linux.sh  common-macos.sh  common-posix.sh  common-trusty.sh  common-windows.bat  linux-clang3-x64.yml  linux-clang6-x64.yml  linux-clang8-x64.yml  linux-gcc-4x-x64.yml  linux-gcc-4x-x86.yml  linux-gcc-5x-x64.yml  linux-gcc-6x-x64.yml  linux-gcc-7x-x64.yml  mqtt-canary-test-amz.yml  mqtt-canary-test.yml  setup-libs.sh  windows-msvc-2015.yml  windows-msvc-2017.yml
include/aws/mqtt/: aws_iot_service_client.h  client.h  exports.h  mqtt.h
include/aws/mqtt/manual-puback/: manual_puback.h
include/aws/mqtt/private/: client_channel_handler.h  client_impl.h  client_impl_shared.h  fixed_header.h  mqtt311_decoder.h  mqtt311_listener.h  mqtt_client_test_helper.h  mqtt_iot_metrics.h  mqtt_iot_sdk_metrics.h  mqtt_subscription_set.h  packets.h  shared.h  shared_constants.h  topic_tree.h  utils.h
include/aws/mqtt/private/manual-puback/: manual_puback_impl.h
include/aws/mqtt/private/request-response/: protocol_adapter.h  request_response.h  request_response_client.h  request_response_subscription_set.h  subscription_manager.h  weak_ref.h
include/aws/mqtt/private/v311/: mqtt311_client_config.h  mqtt311_client_impl.h
include/aws/mqtt/private/v5/: mqtt3_to_mqtt5_adapter_impl.h  mqtt3_to_mqtt5_adapter_subscription_set.h  mqtt5_client_impl.h  mqtt5_decoder.h  mqtt5_encoder.h  mqtt5_operation.h  mqtt5_options_storage.h  mqtt5_service_topic_manager.h  mqtt5_to_mqtt3_adapter_impl.h  mqtt5_topic_alias.h  mqtt5_utils.h  rate_limiters.h
include/aws/mqtt/request-response/: request_response_client.h
include/aws/mqtt/v311/: mqtt311_client.h
include/aws/mqtt/v5/: mqtt5_client.h  mqtt5_client_config.h  mqtt5_packet_storage.h  mqtt5_persistence.h  mqtt5_types.h
include/aws/mqtt/v5/operations/: mqtt5_operation_connect.h  mqtt5_operation_disconnect.h  mqtt5_operation_publish.h  mqtt5_operation_subscribe.h  mqtt5_operation_unsubscribe.h
include/aws/mqtt/v5/private/: mqtt5_client_impl.h
include/aws/mqtt/v5/views/: mqtt5_view_connack.h  mqtt5_view_disconnect.h
integration-testing/: mqtt3_client_test.bash
source/: aws_iot_service_client.c  client.c  client_channel_handler.c  client_impl_shared.c  fixed_header.c  mqtt.c  mqtt311_decoder.c  mqtt311_listener.c  mqtt3_to_mqtt5_adapter.c  mqtt_iot_metrics.c  mqtt_iot_sdk_metrics.c  mqtt_subscription_set.c  packets.c  topic_tree.c  utils.c
source/manual-puback/: manual_puback.c
source/request-response/: protocol_adapter.c  request_response_client.c  request_response_subscription_set.c  subscription_manager.c  weak_ref.c
source/v311/: mqtt311_client.c  mqtt311_client_config.c
source/v5/: mqtt3_to_mqtt5_adapter.c  mqtt3_to_mqtt5_adapter_subscription_set.c  mqtt5_callbacks.c  mqtt5_client.c  mqtt5_client_config.c  mqtt5_decoder.c  mqtt5_encoder.c  mqtt5_listener.c  mqtt5_operation.c  mqtt5_options_storage.c  mqtt5_to_mqtt3_adapter.c  mqtt5_topic_alias.c  mqtt5_types.c  mqtt5_utils.c  mqtt_subscription_set.c  rate_limiters.c
tests/: CMakeLists.txt  aws_iot_client_test.c  connection_state_test.c  main.c  mqtt5_client_config_test.c  mqtt5_client_tests.c  mqtt5_encoding_tests.c  mqtt5_operation_and_storage_tests.c  mqtt5_operation_test.c  mqtt5_operation_validation_failure_tests.c  mqtt5_testing_utils.c  mqtt5_testing_utils.h  mqtt5_utils_tests.c  mqtt_iot_sdk_metrics_test.c  mqtt_mock_server_handler.c  mqtt_mock_server_handler.h  packet_encoding_test.c  paho_client_test.c  request_response_protocol_adapter_tests.c  shared_utils_tests.c  socks5_proxy_tests.c  topic_tree_test.c  utils_test.c
tests/request-response/: protocol_adapter_tests.c  request_response_client_tests.c  request_response_protocol_adapter_tests.c  subscription_manager_tests.c
tests/service_client/: aws_iot_service_client_tests.c
tests/v3/: connection_state_test.c  mqtt311_listener_test.c  mqtt311_testing_utils.c  mqtt311_testing_utils.h  mqtt_mock_server_handler.c  mqtt_mock_server_handler.h  operation_statistics_test.c  packet_decoding_tests.c  packet_encoding_test.c  packet_framing_tests.c  topic_tree_test.c
tests/v3-client/: aws_iot_client_test.c  paho_client_test.c
tests/v311/: connection_state_test.c
tests/v311-client/: aws_iot_client_test.c  paho_client_test.c
tests/v5/: mqtt3_to_mqtt5_adapter_subscription_set_tests.c  mqtt3_to_mqtt5_adapter_tests.c  mqtt5_client_manual_puback_tests.c  mqtt5_client_tests.c  mqtt5_encoding_tests.c  mqtt5_operation_and_storage_tests.c  mqtt5_operation_validation_failure_tests.c  mqtt5_testing_utils.c  mqtt5_testing_utils.h  mqtt5_to_mqtt3_adapter_tests.c  mqtt5_topic_alias_tests.c  mqtt5_utils_tests.c  mqtt_subscription_set_tests.c  rate_limiter_tests.c  request_response_protocol_adapter_tests.c
